5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1808_2575.log
== TEST (2019-06-11 16:52:29) 
-- CODE:
vet = array(eval(input("Midias: ")))
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:52:52) 
-- CODE:
vet = array(eval(input("Midias: "))).upper()
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
print()
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vet = array(eval(input())).upper()
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:09) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: "))).upper()
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
print()
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:22) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: "))).upper()
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:59) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: ")))
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:22) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: ")))
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == ""):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:34) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: ")))
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == ""):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:54:37) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: ")))
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == ""):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- EXECUTION TIME:
1.73307
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
Midias: [1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
Midias: [1 1 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
Midias: [2 2 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:54:53) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: ")))
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == ""):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:55:07) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: "))).upper()
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:55:26) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: "))).upper()
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "tv"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFL"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:56:21) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: ")))
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:56:27) 
-- CODE:
from numpy import*
vet = array(eval(input("Midias: ")))
resultado = zeros(3, dtype = int)

for i in range(size(vet)):
	if (vet[i]  == "TV"):
		resultado[0] = resultado[0] + 1
	elif(vet[i] == "NETFLIX"):
		resultado[1] = resultado[1] + 1
	elif(vet[i] == "YOUTUBE"):
		resultado[2] = resultado[2] + 1
print(resultado)
	
-- EXECUTION TIME:
1.13776
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 1 1]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
